syntax = "proto3";

package riderservice.dto;

option java_package = "ru.golovachev.riderservice.dto";
option java_multiple_files = true;

message RiderDto {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string phone_number = 4;
}